--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ url.api.auth = http://localhost:8081/auth
 url.service.user = http://localhost:8082/user
 url.service.pincode = http://54.187.253.221:8083/api/pincode
 url.api.gateway = http://localhost:8000
+url.authservice.social = http://localhost:8000/authservice/oauth2/authorization/
