--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>tiles-jsp</artifactId>
 			<version>3.0.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.parser</groupId>
+			<artifactId>data-parser</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -80,7 +85,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-
 	</build>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
