--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 logging.path = /media/rajan/HardDrive/project/resources/appLogs
-url.api.auth = http://localhost:8081/auth
 url.api.gateway = http://localhost:8000
-url.service.auth = http://localhost:8081/auth
-url.service.user = http://localhost:8082/user
+#url.service.user = http://localhost:8082/userservice
 url.service.pincode = http://54.187.253.221:8083/api/pincode
-url.authservice.social = http://localhost:8000/authservice/oauth2/authorization/
+#url.authservice.social = http://localhost:8000/authservice/oauth2/authorization/
