Page context set using core tag in jsp

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
       context-path: /app
 logging:
    level:
-      root: TRACE
+      root: INFO
       com.auth: TRACE
-      org.springframework.web: TRACE
-      org.springframework.security: TRACE
+      org.springframework.web: INFO
+      org.springframework.security: INFO
  
