--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-logging.path = /media/rajan/HardDrive/project/resources/appLogs
+#logging.path = /media/rajan/HardDrive/project/resources/appLogs
+logging.path = /mnt/filer/resources/appLogs
 url.api.gateway = http://localhost:8000
 #url.service.user = http://localhost:8082/userservice
 url.service.pincode = http://54.187.253.221:8083/api/pincode
