--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com</groupId>
-	<artifactId>app</artifactId>
+	<groupId>com.app</groupId>
+	<artifactId>WebApp</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>app Maven Webapp</name>
+	<version>1.0.RELEASE</version>
+	<name>ROOT</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>org.parser</groupId>
 			<artifactId>data-parser</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -75,7 +75,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>app</finalName>
+		<finalName>${project.name}</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
